# core

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.py  pyproject.toml  tritonserver_stub.cc
.github/workflows/: build-and-test.yml  pre-commit.yml
.reuse/: dep5
cmake/: CMakePresets.json  TritonCoreConfig.cmake.in
examples/batch_strategy/single_batching/: CMakeLists.txt
examples/batch_strategy/single_batching/src/: libtriton_singlebatching.ldscript  single_batching.cc
examples/batch_strategy/volume_batching/src/: volume_batching.cc
include/triton/core/: tritonbackend.h  tritoncache.h  tritonrepoagent.h  tritonserver.h
profiles/: linux-gcc13-release
python/: CMakeLists.txt  __init__.py  _common.py  _infer.py  _logger.py  _metrics.py  _pybind.py  _server.py  _trace.py  build_wheel.py  setup.py
python/binding/: tritonserver_pybind.cc
python/test/: test_api.py  test_binding.py
python/test/test_api_models/test/: config.pbtxt
python/test/test_api_models/test/1/: model.py
python/tritonserver/: CMakeLists.txt  __init__.py
python/tritonserver/_api/: __init__.py  _allocators.py  _datautils.py  _dlpack.py  _logging.py  _memorybuffer.py  _model.py  _request.py  _response.py  _server.py  _tensor.py  wrapper.py
python/tritonserver/_c/: __init__.py  triton_bindings.pyi  tritonserver_pybind.cc
src/: CMakeLists.txt  backend_config.cc  backend_config.h  backend_manager.cc  backend_manager.h  backend_memory_manager.cc  backend_memory_manager.h  backend_model.cc  backend_model.h  backend_model_instance.cc  backend_model_instance.h  buffer_attributes.cc  buffer_attributes.h  cache_entry.cc  cache_entry.h  cache_manager.cc  cache_manager.h  common.cc  common.h  constants.h  cuda_block_manager.cc  cuda_block_manager.h  cuda_memory_manager.cc  cuda_memory_manager.h  cuda_utils.cc  cuda_utils.h  device_memory_tracker.h  dynamic_batch_scheduler.cc  dynamic_batch_scheduler.h  ensemble_model.cc  ensemble_model.h  ensemble_scheduler.cc  ensemble_scheduler.h  ensemble_utils.cc  ensemble_utils.h  failure_reasons.h  filesystem.cc  filesystem.h  infer_parameter.cc  infer_parameter.h  (+79 more)
src/ensemble_scheduler/: ensemble_model.cc  ensemble_model.h  ensemble_scheduler.cc  ensemble_scheduler.h  ensemble_utils.cc  ensemble_utils.h
src/ensemble_scheduler/ensemble_scheduler/: ensemble_model.cc  ensemble_model.h  ensemble_scheduler.cc
src/filesystem/: api.cc  api.h  as.h  common.h  gcs.h  local.h  s3.h
src/filesystem/implementations/: as.h  common.h  gcs.h  local.h  s3.h
src/model_repository_manager/: model_lifecycle.cc  model_lifecycle.h  model_repository_manager.cc  model_repository_manager.h
src/sequence_batch_scheduler/: sequence_batch_scheduler.cc  sequence_batch_scheduler.h  sequence_utils.cc  sequence_utils.h
src/test/: CMakeLists.txt  async_work_queue_test.cc  backend_output_detail_test.cc  bytes_input_validation_test.cc  input_byte_size_test.cc  memory_test.cc  metrics_api_test.cc  model_config_utils_test.cc  pinned_memory_manager_test.cc  query_test.cc  register_api_test.cc  repo_agent_test.cc  request_cancellation_test.cc  response_cache_test.cc  triton_repo_agent_test.cc
tools/: update_copyright_year.py
